# nsrw_emu

./: .gitignore  BUILD.md  CHANGELOG.md  CHECKPOINT_STRUCTURE_TODO.md  CLAUDE.md  CMakeLists.txt  ENUM_SYSTEM.md  FAULT_INJECTION.md  IMP.md  PROGRESS.md  README.md  RECENT_CHANGES.md  REGS.md  REPORT.md  SPEC.md  TODO_AUDIT.md  TUI_ENUM_IMPROVEMENTS.md  build.sh  connect.sh  load.sh
docs/: .datasheet_placeholder  README.md  RESET_FAULT_REQUIREMENTS.md
firmware/: CMakeLists.txt  app_main.c  app_main_new.c  nsp_handler.c  nsp_handler.h  test_mode.c  test_mode.h  test_phase9.c  test_phase9.h  test_results.c  test_results.h
firmware/config/: json_loader.c  json_loader.h  scenario.c  scenario.h  scenario_registry.c  scenario_registry.h
firmware/config/scenarios/: complex_test.json  lcl_trip.json  overspeed_fault.json  power_limit_override.json
firmware/console/: DESIGN.md  commands.c  commands.h  console_config.h  console_format.c  console_format.h  logo.h  table_config.c  table_config.h  table_control.c  table_control.h  table_core1_stats.c  table_core1_stats.h  table_dynamics.c  table_dynamics.h  table_fault_injection.c  table_fault_injection.h  table_nsp.c  table_nsp.h  table_protection_limits.c  table_protection_limits.h  table_protection_status.c  table_protection_status.h  table_protections.c  table_protections.h  table_serial.c  table_serial.h  table_telemetry.c  table_telemetry.h  table_test_modes.c  table_test_modes.h  table_tests.c  table_tests.h  tables.c  tables.h  tui.c  tui.h  tui_old.c
firmware/device/: nss_nrwa_t6_commands.c  nss_nrwa_t6_commands.h  nss_nrwa_t6_model.c  nss_nrwa_t6_model.h  nss_nrwa_t6_protection.c  nss_nrwa_t6_protection.h  nss_nrwa_t6_regs.c  nss_nrwa_t6_regs.h  nss_nrwa_t6_telemetry.c  nss_nrwa_t6_telemetry.h  nss_nrwa_t6_test_modes.c  nss_nrwa_t6_test_modes.h
firmware/drivers/: crc_ccitt.c  crc_ccitt.h  nsp.c  nsp.h  rs485_uart.c  rs485_uart.h  slip.c  slip.h
firmware/platform/: board_pico.h  gpio_map.c  gpio_map.h  timebase.c  timebase.h
firmware/util/: core_sync.c  core_sync.h  fixedpoint.h  ringbuf.c  ringbuf.h  unaligned.h
tests/scenarios/: README.md  crc_injection.json
